Updated Enemy Encounter (Goblins), added 2 more enemies to the encounter to make it more difficult.

--- a/BasicGameLoop.vcxproj
+++ b/BasicGameLoop.vcxproj
@@ -128,13 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicGameLoop.cpp" />
-    <ClCompile Include="CreateCharacter.cpp" />
+    <ClCompile Include="Character.cpp" />
+    <ClCompile Include="Creature.cpp" />
+    <ClCompile Include="Encounter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Plan %28Pseudo Code%29.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CreateCharacter.h" />
+    <ClInclude Include="Character.h" />
+    <ClInclude Include="Creature.h" />
+    <ClInclude Include="Encounter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
